# SimpleTodo

./: .dockerignore  .gitignore  README.md  docker-compose.yaml  mypy.ini  pyproject.toml
src/api/: Dockerfile  main.py
src/api/v1/todo/: dependencies.py  router.py
src/application/dto/: create_todo.py  todo.py  update_todo.py
src/application/exceptions/: not_found.py
src/application/interfaces/repositories/: todo.py
src/application/services/: todo_service.py
src/config/: __init__.py  database.py
src/domain/: entity.py
src/infrastructure/database/: __init__.py  base.py  connext.py
src/infrastructure/database/migrations/: env.py
src/infrastructure/database/migrations/versions/: b970da684739_initial.py
src/infrastructure/database/models/: todo.py
src/infrastructure/repositories/: todo.py
