[tool.poetry]
name = "simpletodo"
version = "0.1.0"
description = ""
authors = ["Roman505050 <myhun59@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
asyncpg = "^0.29.0"
fastapi = "^0.115.0"
pydantic-settings = "^2.5.2"
pydantic = "^2.9.2"
sqlalchemy = "^2.0.35"
loguru = "^0.7.2"
uvicorn = "^0.30.6"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
mypy = "^1.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
